--- a/views/address/addressViewAll.ejs
+++ b/views/address/addressViewAll.ejs
@@ -5,7 +5,7 @@
     <body>
         <h1>Addresses</h1>
         <table border="1">
-            <tr><th>Address ID</th><th>Street</th><th>zip_code</th></tr>
+            <tr><th>Address ID</th><th>Street</th><th>Zip Code</th></tr>
                 <% for(var i=0; result.length > i; i++ ) { %>
             <tr>
                 <td><%= result[i].address_id%></td>
