--- a/views/resume/resumeViewAll.ejs
+++ b/views/resume/resumeViewAll.ejs
@@ -5,7 +5,7 @@
     <body>
         <h1>Resumes</h1>
         <table border="1">
-            <tr><th>Resume ID</th><th>Name</th><th>account_id</th></tr>
+            <tr><th>Resume ID</th><th>Name</th><th>Account ID</th></tr>
                 <% for(var i=0; result.length > i; i++ ) { %>
             <tr>
                 <td><%= result[i].resume_id%></td>
