--- a/views/school/schoolViewAll.ejs
+++ b/views/school/schoolViewAll.ejs
@@ -5,7 +5,7 @@
     <body>
         <h1>Schools</h1>
         <table border="1">
-            <tr><th>School ID</th><th>Name</th><th>address_id</th></tr>
+            <tr><th>School ID</th><th>Name</th><th>Address ID</th></tr>
             <% for(var i=0; result.length > i; i++ ) { %>
             <tr>
                 <td><%= result[i].school_id%></td>
