--- a/views/skill/skillViewByld.ejs
+++ b/views/skill/skillViewByld.ejs
@@ -7,7 +7,7 @@
         <ul>
             <li>Skill ID: <%= result[0].skill_id%></li>
             <li>Skill Name: <%= result[0].skill_name %></li>
-            <li>Description: <%= result[0].description %></li>
+            <li>Description: <%= result[0].skill_description %></li>
         </ul>
     </body>
 </html>
