--- a/views/account/accountViewAll.ejs
+++ b/views/account/accountViewAll.ejs
@@ -9,9 +9,9 @@
                 <% for(var i=0; result.length > i; i++ ) { %>
             <tr>
                 <td><%= result[i].account_id%></td>
-                <td><a href="/account/?account_id=<%= result[i].account_id %>"><%= result[i].first_name %></a></td>
-                <td><a href="/account/?account_id=<%= result[i].account_id %>"><%= result[i].last_name %></a></td>
-                <td><%= result[i].email %></td>
+                <td><%= result[i].first_name %></td>
+                <td><%= result[i].last_name %></td>
+                <td><a href="/account/?account_id=<%= result[i].account_id %>"><%= result[i].email %></a></td>
             </tr>
             <% } %>
         </table>
